<resources>
    <string name="version">1.5</string>
    <string name="app_name">Psychology Facts</string>
    <string name="interstial_ad">301374014310161_301915027589393</string>
    <string name="banner_ad">301374014310161_307850813662481</string>
    <string name="native_ad">nothing at this time</string>
    <string name="card_title">Card Title</string>
    <string name="smartfacts">Brainy facts</string>
    <string name="home">home</string>
    <string name="randomfact">Random fact</string>
    <string name="factoftheday">Fact Of The Day</string>
    <string name="HOME">HOME</string>
    <string name="navigation_drawer_close">open drawer</string>
    <string name="navigation_drawer_open">Close drawer</string>
    <string name="dark">Dark mode</string>
    <string name="get_notifications">Notifications</string>
    <string name="psychology_app_detail">This app shows you amazing facts about psychology</string>
    <string name="release_date">Release Date</string>
    <string name="contact_us">aarushp1993@gmail.com</string>
    <string name="more_apps">More Apps</string>
    <string name="feedback">Feedback</string>
    <string name="licenses">all rights reserved</string>
    <string name="sharee">Share</string>
    <string name="sv">Search</string>
    <string name="lampimage">Bookmark some facts</string>
    <string name="it_s_a_bit_lonely_here">NOTHING TO SHOW TRY TO BOOKMARK SOME FACTS.</string>
    <string name="get_started_by_saving_facts">Read and save</string>
    <string name="communicate">Communicate</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About</string>
    <string name="save">Bookmarks</string>
    <string name="idea">idea</string>
    <string name="tell_me_who_is_this_winner_of_the_battle_between_goku_vs_vegita">tell me who is this winner of the battle between goku vs vegita</string>
    <string name="todo">TODO</string>
    <string name="fact_of_the_day">Fact of the day</string>
    <string name="the_fact_should_be_shown_here">the fact should be shown here</string>
    <string name="psychology_facts">Psychology Facts</string>
    <string name="text_for_setting">Settings</string>
    <string name="date">13, August 2020</string>
    <!--<string name="card_title">Card Title</string>-->
</resources>