<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item android:id="@+id/home"
        android:icon="@drawable/home_vector"
        android:title="@string/home"
        />
    <item android:id="@+id/smartFacts"
        android:icon="@drawable/ic_start_up"
        android:title="@string/smartfacts"
        />
    <item android:id="@+id/randomFacts"
        android:icon="@drawable/ic_brain"
        android:title="@string/randomfact"
        />
    <item android:id="@+id/factOfTheDay"
        android:icon="@drawable/ic_book"
        android:title="@string/factoftheday"
        />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:icon="@drawable/ic_settings_black_24dp"
                android:id="@id/sharing"
                android:title="@string/settings"
                />
            <item
                android:icon="@drawable/ic_share_black_24dp"
                android:id="@+id/share"
                android:title="@string/share"
                />
            <item
                android:icon="@drawable/ic_google"
                android:id="@+id/rate"
                android:title="@string/rate_us"
                />
            <item
                android:icon="@drawable/ic_email_black_24dp"
                android:id="@+id/feedBack"
                android:title="@string/feedback"
                />
            <item
                android:icon="@drawable/ic_search"
                android:id="@+id/more"
                android:title="@string/more_apps"
                />
            <item
                android:icon="@drawable/ic_about"
                android:id="@+id/about"
                android:title="@string/about"
                />
        </menu>
    </item>
</menu>