<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/backColor"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/aboutActivity"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100.0dip"
            android:layout_height="100.0dip"
            android:layout_marginTop="120.0dip"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="7.0dip"
            >
            <RelativeLayout
                android:background="#0B0A0A"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <ImageView
                    android:layout_width="120.0dip"
                    android:layout_height="100.0dip"
                    android:src="@drawable/deeeep"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:textSize="21.0sp"
            android:textColor="@color/maincolor"
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/app_name"
            android:layout_below="@id/cardView"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:textSize="15.0sp"
            android:textColor="@color/settingColor"
            android:id="@+id/detailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:text="@string/psychology_app_detail"
            android:layout_below="@id/appName"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginStart="30.0dip"
            android:layout_marginEnd="30.0dip"
            />
        <RelativeLayout
            android:id="@+id/idApp"
            android:background="@color/aboutBackColor"
            android:padding="20.0dip"
            android:layout_width="fill_parent"
            android:layout_height="80.0dip"
            android:layout_marginTop="30.0dip"
            android:layout_below="@id/detailTextView"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                >
                <TextView
                    android:textColor="@color/maincolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Version"
                    />
                <View
                    android:background="@color/colorAccent"
                    android:layout_width="20.0dip"
                    android:layout_height="2.0dip"
                    />
                <TextView
                    android:textColor="@color/maincolor"
                    android:id="@+id/getVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                >
                <TextView
                    android:textColor="@color/maincolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    />
                <View
                    android:layout_gravity="end"
                    android:background="@color/colorAccent"
                    android:layout_width="20.0dip"
                    android:layout_height="2.0dip"
                    />
                <TextView
                    android:textColor="@color/maincolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/detailLinear"
            android:padding="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idApp"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                >
                <ImageView
                    android:layout_width="50.0dip"
                    android:layout_height="50.0dip"
                    android:src="@drawable/ic_email_white_24dp"
                    />
                <TextView
                    android:textSize="30.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/maincolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:layout_marginStart="10.0dip"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:layout_marginStart="10.0dip"
                >
                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:src="@drawable/ic_map_black_24dp"
                    />
                <TextView
                    android:textSize="16.0sp"
                    android:textColor="@color/maincolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vadodara, India"
                    android:layout_marginStart="10.0dip"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/factbookLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30.0dip"
                android:layout_marginStart="10.0dip">
                <ImageView
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:src="@drawable/ic_search_black_24dp"
                    />
                <TextView
                    android:textSize="16.0sp"
                    android:textColor="@color/maincolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_apps"
                    android:layout_marginStart="10.0dip"
                    />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:background="@color/aboutBackColor"
            android:layout_width="fill_parent"
            android:layout_height="130.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_below="@id/detailLinear"
            >
            <TextView
                android:textSize="21.0sp"
                android:textColor="@color/maincolor"
                android:id="@+id/feedbackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:text="@string/feedback"
                android:layout_centerHorizontal="true"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:layout_below="@id/feedbackText"
                android:layout_marginStart="20.0dip">
                <ImageView
                    android:layout_width="30.0dip"
                    android:layout_height="30.0dip"
                    android:src="@drawable/ic_gmail" />
                <TextView
                    android:textColor="@color/maincolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:layout_marginStart="20.0dip"
                    android:layout_marginEnd="10.0dip" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_below="@id/relativeLayout">
            <TextView
                android:textColor="@color/maincolor"
                android:id="@+id/licenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.0dip"
                android:text="@string/licenses"
                android:layout_marginStart="20.0dip" />
            <View
                android:background="@color/colorAccent"
                android:layout_width="20.0dip"
                android:layout_height="2.0dip"
                android:layout_marginStart="20.0dip" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>