<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/colorPrimary"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="600.0dip"
        android:layout_marginTop="110.0dip"
        android:layout_marginBottom="110.0dip"
        android:layout_marginStart="10.0dip"
        android:layout_marginEnd="10.0dip"
        app:cardCornerRadius="15.0dip"
        >
        <RelativeLayout
            android:background="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
            <ImageView
                android:id="@+id/fod_image"
                android:layout_width="100.0dip"
                android:layout_height="100.0dip"
                android:layout_marginTop="10.0dip"
                android:src="@drawable/ic_idea"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/idea"
                />
            <TextView
                android:textSize="21.0sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:id="@+id/viewpagertext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="factoftheday"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:lineSpacingExtra="3.0dip"
                android:layout_marginStart="10.0dip"
                android:layout_marginEnd="10.0dip"
                />
            <RelativeLayout
                android:padding="5.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                >
                <ImageView
                    android:id="@id/account_name"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:src="@drawable/ic_account_circle_white_24dp"
                    android:layout_centerInParent="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:textColor="#ff121212"
                    android:id="@+id/bottom_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fact_of_the_day"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10.0dip"
                    android:layout_toEndOf="@id/account_name"
                    />
                <ImageView
                    android:id="@id/copy_horizontal"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:src="@drawable/ic_content_copy_white_24dp"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="5.0dip"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/todo" />
                <ImageView
                    android:id="@+id/share_horizontal"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:src="@drawable/ic_share_white_24dp"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20.0dip"
                    android:layout_toStartOf="@id/copy_horizontal"
                    />
                <ImageView
                    android:id="@id/save"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:layout_marginEnd="20.0dip"
                    android:layout_toStartOf="@id/share_horizontal"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <include
        android:id="@+id/toolbar"
        layout="@layout/news_toolbar"
        />
</RelativeLayout>